[tool.poetry]
name = "ansibleflask"
version = "0.1.1"
description = ""
authors = ["mataratos nih0n"]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
